--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
+    "toastr": "^2.1.4",
+    "v-toaster": "^1.0.3",
     "vue": "^2.5.2",
+    "vue-qrcode-reader": "^1.3.3",
     "vue-router": "^3.0.1",
+    "vue-youtube-embed": "^2.2.1",
     "vuetify": "^1.3.11",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
